tests/error/iter_errors/next_wrong_type.err
Error: Not an iterator (at $FILE:33:13)
   | 
31 | @guppy
32 | def test(x: MyType) -> None:
33 |     for _ in x:
   |              ^ Expression of type `MyIter` is not an iterator

Help: Fix signature of method `MyIter.__next__`:  Expected `MyIter ->
Option[(?T, MyIter)]`, got `MyIter -> (MyIter, float)`

Guppy compilation failed due to 1 previous error
